Time: 99 ms (5.34%), Space: 45.3 MB (6.38%) - LeetHub